--- a/body/click/loader.css
+++ b/body/click/loader.css
@@ -1,7 +1,7 @@
 .loader {
   position: relative;
-  width: 1.5em; /* 缩小尺寸 */
-  height: 1.5em; /* 缩小尺寸 */
+  width: 1.5em;
+  height: 1.5em;
   transform: rotate(45deg);
 }
 
@@ -11,9 +11,8 @@
   top: 0%;
   left: 0%;
   display: block;
-  width: 0.2em; /* 缩小伪元素的尺寸 */
-  height: 0.2em; /* 缩小伪元素的尺寸 */
-  border-radius: 0.15em; /* 调整圆角以匹配新尺寸 */
+  width: 0.2em; height: 0.2em;
+  border-radius: 0.15em;
   transform: translate(-50%, -50%);
 }
 
@@ -27,15 +26,15 @@
 
 @keyframes before8 {
   0% {
-    width: 0.3em; /* 调整开始时的宽度 */
+    width: 0.3em;
     box-shadow: 0.7em -0.3em rgba(225, 20, 98, 0.75), -0.7em 0.3em rgba(111, 202, 220, 0.75);
   }
   35% {
-    width: 1.5em; /* 调整动画中间阶段的宽度 */
+    width: 1.5em;
     box-shadow: 0 -0.3em rgba(225, 20, 98, 0.75), 0 0.3em rgba(111, 202, 220, 0.75);
   }
   70% {
-    width: 0.3em; /* 调整动画结束阶段的宽度 */
+    width: 0.3em;
     box-shadow: -0.7em -0.3em rgba(225, 20, 98, 0.75), 0.7em 0.3em rgba(111, 202, 220, 0.75);
   }
   100% {
@@ -45,15 +44,15 @@
 
 @keyframes after6 {
   0% {
-    height: 0.3em; /* 调整开始时的高度 */
+    height: 0.3em;
     box-shadow: 0.3em 0.7em rgba(61, 184, 143, 0.75), -0.3em -0.7em rgba(233, 169, 32, 0.75);
   }
   35% {
-    height: 1.5em; /* 调整动画中间阶段的高度 */
+    height: 1.5em;
     box-shadow: 0.3em 0 rgba(61, 184, 143, 0.75), -0.3em 0 rgba(233, 169, 32, 0.75);
   }
   70% {
-    height: 0.3em; /* 调整动画结束阶段的高度 */
+    height: 0.3em;
     box-shadow: 0.3em -0.7em rgba(61, 184, 143, 0.75), -0.3em 0.7em rgba(233, 169, 32, 0.75);
   }
   100% {
@@ -63,6 +62,6 @@
 
 .loader {
   position: absolute;
-  top: calc(50% - 0.75em); /* 根据新尺寸调整垂直位置 */
-  left: calc(50% - 0.75em); /* 根据新尺寸调整水平位置 */
+  top: calc(50% - 0.75em);
+  left: calc(50% - 0.75em);
 }
