--- a/layout-bottom/music/player.css
+++ b/layout-bottom/music/player.css
@@ -10,8 +10,9 @@
   padding: 10px;
   background: rgba(255, 255, 255, 0.05);
   backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.18); border-radius: 10px;
+  border-radius: 10px;
   position: relative; /* 为通知定位提供参考点 */
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.155);
 }
 
 /* 控制面板标题 */
@@ -36,6 +37,7 @@
   border: none; border-radius: 50%;
   font-size: 15px;
   transition: transform 0.2s, background-color 0.2s;
+  cursor: pointer;
 }
 
 /* 控制按钮悬停效果 */
@@ -59,14 +61,8 @@
     font-size: 20px; /* 图标大小 */
     color: white; background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(10px);
-    border-radius: 50%; border: 1px solid rgba(255, 255, 255, 0.18);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-
-  /* 播放动画 */
-  .mobile-toggle:hover {
-    transform: scale(1.05);
-    background: rgba(255, 255, 255, 0.3);
+    border-radius: 50%; 
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.155);
   }
 
   /* 旋转动画 */
