--- a/layout-bottom/music/playlist/playlist.css
+++ b/layout-bottom/music/playlist/playlist.css
@@ -28,7 +28,8 @@
   color: rgba(255, 255, 255, 0.7);
   background: rgba(255, 255, 255, 0.05);
   backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.155);
+  cursor: pointer;
 }
 
 #playlist-toggle:hover {
@@ -50,7 +51,6 @@
   color: rgba(255, 255, 255, 0.85);
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
-  border: 0px solid rgba(255, 255, 255, 0.2); /* 初始边框为0 */
   scrollbar-width: none;   /* 隐藏滚动条但保留滚动功能 */
   transition: 0.5s; /* 过渡效果 */
 }
@@ -59,8 +59,6 @@
 .playlist.expanded {
   max-height: 36vh; /* 使用视口高度的36%作为最大高度 */
   transition: 0.5s; /* 过渡效果 */
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  box-sizing: border-box; /* 包括边框和内边距在内的总宽度和高度 */
 }
 
 /* 在小屏幕上保持相同的最大高度 */
@@ -81,15 +79,13 @@
   color: rgba(255, 255, 255, 0.85);
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
-  border: 0 solid rgba(255, 255, 255, 0.2);
   scrollbar-width: none;
   transition: max-height 0.5s ease, border 0.3s ease;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.155);
 }
 
 .playlist.expanded {
   max-height: 36vh;
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  box-sizing: border-box;
 }
 
 @media (max-width: 768px) {
