--- a/layout-bottom/music/progress/progress.css
+++ b/layout-bottom/music/progress/progress.css
@@ -5,7 +5,7 @@
     margin: 10px auto;
     background-color: rgba(255, 255, 255, 0.2);
     border-radius: 5px;
-
+    cursor: pointer;
     position: relative;
   }
   
@@ -23,7 +23,7 @@
     transform: translate(-50%, -50%);
     background-color: rgb(255, 255, 255);
     border-radius: 50%;
-    pointer-events: none; /* 确保点击事件穿透到容器 */
+
   }
 
   .time-info {  /* 时间信息 */
