--- a/layout-bottom/personal/info.css
+++ b/layout-bottom/personal/info.css
@@ -2,7 +2,7 @@
 .info-container {
   display: grid;
   grid-template-columns: 160px 1fr;
-  gap: 1.25rem;
+  gap: 10px;
   position: fixed;
   bottom: 20px; left: 20px; /* 左下角20xp */
   z-index: 100;
@@ -11,7 +11,6 @@
 
 /* 头像区域 */
 .avatar-container {
-
   width: 160px;
   height: 160px;
 }
@@ -21,10 +20,9 @@
   overflow: hidden;
   width: 100%; height: 100%;
   border-radius: 50%;
-  border: 3px solid rgba(255, 255, 255, 0.2);
   background: rgba(197, 197, 197, 0.2);
   backdrop-filter: blur(0.625rem);
-  box-shadow: var(--shadow);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.155);
 }
 
 .avatar img {
@@ -43,8 +41,8 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 220px;
-  gap: 0.75rem;
+  width: 210px;
+  gap: 10px;
 }
 
 /* 按钮容器 */
@@ -61,10 +59,9 @@
   width: 2.25rem;
   height: 2.25rem;
   border-radius: 0.5rem;
-  border: 1px solid rgba(255, 255, 255, 0.2);
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(0.3125rem);
-  box-shadow: var(--shadow);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.155);
   transition: all 0.3s ease;
 }
 
@@ -87,7 +84,7 @@
 
 .bottom-button:hover {
   transform: translateY(-0.1875rem);
-  box-shadow: 0 0.3125rem 0.9375rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.155);
 }
 
 .bottom-button.github:hover { background: #373939; }
@@ -99,24 +96,21 @@
 .tags-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 0.4rem;
-  padding: 10px;
+  gap: 7px; padding: 10px;
   background: rgba(255, 255, 255, 0.05);
   backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.18); border-radius: 10px;
+  border-radius: 10px;
   backdrop-filter: blur(0.625rem);
-  box-shadow: var(--shadow);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.155);
   width: 100%;
-  box-sizing: border-box;
 }
 
 .tag {
-  padding: 0.3125rem 0.625rem;
-  background: rgba(255, 255, 255, 0.1);
+  padding: 4px 9px;
+  background: rgba(255, 255, 255, 0.15);
   color: white;
   font-size: 0.65rem;
   border-radius: 0.9375rem;
-  border: 1px solid rgba(255, 255, 255, 0.2);
   white-space: nowrap;
   transition: all 0.3s ease;
 }
