--- a/layout-bottom/personal/info.css
+++ b/layout-bottom/personal/info.css
@@ -91,7 +91,7 @@
 .bottom-button.email:hover { background: #e39e44; }
 .bottom-button.qq:hover { background: #12B7F5; }
 .bottom-button.bilibili:hover { background: #da72bb; }
-.bottom-button.gisgus:hover { background: #4285F4; }
+.bottom-button.gisgus:hover { background: #1ed781; }
 
 /* 标签容器 */
 .tags-container {
