--- a/nav/nav/nav.css
+++ b/nav/nav/nav.css
@@ -11,6 +11,7 @@
   padding: 10px 50px 10px 50px;
   background-color: var(--card);
   border-radius: 15px;
+  border: 2px solid var(--botton-2);
 }
 
 /* 导航项 - 平分宽度 */
@@ -68,7 +69,7 @@
 }
 
 /* 移动端适配 */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 700px) {
   .nav {
     width: 100%;
     bottom: 0;
@@ -76,6 +77,8 @@
     height: 60px;
     padding: 8px 15px;
     max-width: 100%;
+    border: none;
+    box-shadow: 0 0 2px var(--box-shadow-1);
   }
   .nav-item:not(.active) .icon {
     transform: translateY(8px);
